bk_ida/bzip2ida/c1/mainSimpleSort
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/mainSimpleSort/src/blocksort.c:1044:7: error: use of undeclared identifier 'dword_40DE9C'
v11 = dword_40DE9C[v10]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/mainSimpleSort/src/obj/blocksort.o] Error 1
